# EMTG

./: .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  EMTG-Config-template.cmake  INSTALLING.md  README.opensource  THIRD_PARTY_NOTICES.md  build.ps1  build.sh  pytest.ini  requirements-dev.txt  requirements-studio.txt  vcpkg-configuration.json  vcpkg.json
.github/workflows/: fast-tests.yml  ipopt-tests.yml  release.yml
OptionsOverhaul/: list_of_missionoptions.csv
PyEMTG/: Body.py  JourneyOptions.py  Mission.py  MissionOptions.py  NSGAIIpopulation.py  PhysicsOptionsPanel.py  SolverAvailability.py  SolverOptionsPanel.py  Universe.py  __init__.py  adaptive_integration_options.py
PyEMTG/Converters/: Convert_emtgopt_v1_to_v2.py
PyEMTG/OptionsOverhaul/: make_EMTG_missionoptions_journeyoptions.py  make_journeyoptions_python.py  make_missionoptions_python.py  make_missionoptions_source.py
PyEMTG/OuterLoop/: __init__.py  analytics.py  archive.py  campaign.py  canonical.py  cli.py  config.py  control.py  ephemeris.py  evaluator.py  fidelity.py  gene_names.py  genome.py  hardware.py  legacy.py  model.py  nsga2.py  objectives.py  operators.py  physics.py  prefilters.py  process.py  qualification.py  randomness.py  reporting.py  resonance.py  rules.py  seeds.py  serde.py  storage.py  workers.py
PyEMTG/PEATSA/: PEATSAbox.py  PEATSAmenu.py
PyEMTG/Studio/: __init__.py  __main__.py  api.py  bodies.py  body_ephemeris.py  catalog.py  ephemeris.py  launcher.py  materialize.py  models.py  options_schema.py  scheduler.py  search_defaults.py  search_effort.py  storage.py  trajectory.py  worker.py
Universe/ephemeris_files/: go_get_these_files.txt
cmake/: FindIpopt.cmake  GenerateVcpkgSbom.cmake  Packaging.cmake  RunAndCheckExit.cmake  solver_capabilities.json.in
cmake/vcpkg-overlays/cspice/: CMakeLists.txt  License.txt  isatty.patch  portfile.cmake  vcpkg.json
docs/: adaptive_integration.md  adaptive_integration_qualification.md  adaptive_step_driver_audit.md  research_to_runtime_roadmap.md  studio_15kw_aeps_reference_mass_model.md
docs/0_Users/: emtg_studio.md  outerloop.md  outerloop_configuration.md
docs/1_Developers/: ipopt.md  outerloop_architecture.md  outerloop_implementation_report.md  outerloop_public_bibliography.md  outerloop_qualification.md  testing.md
docs/benchmarks/: adaptive_local_20260710.json  adaptive_smoke_20260710.json
packaging/linux/: EXPERIMENTAL.md
packaging/studio/: EMTGStudio.spec  build.ps1
scripts/: audit-linux-dependencies.sh  audit-windows-dependencies.ps1
src/: CMakeLists.txt
src/Astrodynamics/: CMakeLists.txt  EphemerisDerivative.h  body.cpp  body.h  universe.cpp
src/Core/: GSAD_2B.h  missionoptions.cpp  missionoptions.h  problem.cpp
src/Executable/: EMTG_v9.cpp
src/InnerLoop/: CMakeLists.txt  FilamentWalker.cpp  FilamentWalker.h  IPOPT_interface.cpp  IPOPT_interface.h  NLPInterfaceFactory.cpp  NLPInterfaceFactory.h  NLP_interface.cpp  NLP_interface.h  NLPoptions.cpp  NLPoptions.h  SNOPT_interface.cpp  monotonic_basin_hopping.cpp  monotonic_basin_hopping.h
src/InnerLoop/ipopt/: libipopt.def
src/Integration/: AdaptiveIntegration.h  ExplicitRungeKutta.cpp  ExplicitRungeKutta.h  Integrand.h  IntegrationScheme.cpp  IntegrationScheme.h
src/Math/: EMTG_Matrix.cpp  EMTG_Matrix.h  NaturalCubicSpline.h
src/Mission/: mission.cpp
src/Mission/Journey/Phase/BoundaryEvents/: BoundaryEventBase.cpp
src/Mission/Journey/Phase/ParallelShootingPhase/PSBIphase/: PSBIstep.cpp
src/Mission/Journey/Phase/ParallelShootingPhase/PSFBphase/: PSFBstep.cpp
src/Mission/Journey/Phase/TwoPointShootingPhase/CoastPhase/ControlLawThrustPhase/: ControlLawThrustPhase.cpp
src/Mission/Journey/Phase/TwoPointShootingPhase/TwoPointShootingLowThrustPhase/FBLT/: FBLTphase.cpp
src/Propagation/: IntegratedAdaptiveStepPropagator.cpp  IntegratedAdaptiveStepPropagator.h  IntegratedFixedStepPropagator.cpp  IntegratedFixedStepPropagator.h  IntegratedPropagator.cpp  IntegratedPropagator.h  IntegrationStatistics.h  PropagatorFactory.cpp  PropagatorFactory.h
src/Propulator/: Propulator.cpp  Propulator.h
src/SplineEphem/: SplineEphem_body.cpp  SplineEphem_body.h
src/Testing/: CMakeLists.txt
src/Testing/FBLT_fixed_step_half_phase/: CMakeLists.txt  FBLT_fixed_step_half_phase.cpp
src/Testing/acceleration_model_tests/: CMakeLists.txt  STM_test.cpp  time_domain_STM_test.cpp
src/Testing/adouble_tests/: CMakeLists.txt  adouble_tests.cpp
src/Testing/ephemeris_derivative_tests/: CMakeLists.txt  ephemeris_derivative_tests.cpp
src/Testing/ephemeris_reader_tests/: ephemeris_reader_state_tests.cpp
src/Testing/integration_tests/: CMakeLists.txt  adaptive_rk_error_control_tests.cpp
src/Testing/ipopt_interface_tests/: CMakeLists.txt  ipopt_interface_tests.cpp
src/Testing/mission_tests/: CMakeLists.txt  MIRAGE_verification.cpp  mission_testbed.cpp  testbed_driver.cpp
src/Testing/missionoptions_tests/: CMakeLists.txt  missionoptions_testbed_driver.cpp
src/Testing/spline_tests/: natural_cubic_spline_tests.cpp
src/Utilities/: EMTG_solver_utilities.cpp  covariance_reader.cpp  covariance_reader.h  ephemeris_reader.cpp  ephemeris_reader.h  file_utilities.cpp  file_utilities.h  writey_thing.cpp  writey_thing.h
testatron/: adaptive_ab_campaign.py  options_preparation.py  run_asteroid_integration.py  test_inventory.json  test_selection.py  testatron.py
testatron/HardwareModels/: 4_18_2017.emtg_propulsionsystemopt  (+2 more)
tests/: inventory_support.py  test_adaptive_ab_campaign.py  test_adaptive_integration_options.py  test_ephemeris_thrust_units.py  test_fixture_references.py  test_generated_options_consistency.py  test_mission_comparatron.py  test_mission_comparatron_real_files.py  test_mission_options_roundtrip.py  test_mission_options_semantics.py  test_outerloop_cli.py  test_outerloop_core.py  test_outerloop_emtg_integration.py  test_outerloop_infrastructure.py  test_outerloop_rules.py  test_outerloop_v2.py  test_solver_availability.py  test_studio.py  test_test_inventory_policy.py  test_testatron_selection.py  test_truth_inventory.py
(+51 files in other folders)
